--- a/app/templates/djentry.html
+++ b/app/templates/djentry.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT >></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
   </head>
 
   <body>
@@ -33,7 +33,8 @@
         const djid = localStorage.getItem('djId_dj');  //parseInt(document.getElementById('djInput').value);
         const data = {'name':name, 'dj':djid};
         console.log(data);
-        fetch(`http://127.0.0.1:5000/api/event`, {
+        const fetch_event = "{{ url_for('create_event') }}";
+        fetch(fetch_event, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -46,7 +47,7 @@
           // localStorage.setItem('djId_dj', djid);
           console.log('yeah');
 
-          window.location.href = 'http://127.0.0.1:5500/views/dj.html';
+          window.location.href = "{{ url_for('dj') }}";
 
           })
           .catch(error => console.error('Error:', error));
