--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -37,7 +37,7 @@ there is somekind of panel which prints the action made like creating a user or 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT >></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
   </head>
 
   <body>
