--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT >> Registration</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
 </head>
 <body>
     <div class="header">
@@ -118,7 +118,10 @@
 
                     const data = {'name':name.value, 'mail':email.value, 'phone': phone.value, 'pass':confirmPasswordInput.value};
                     console.log(data);
-                    fetch(`http://127.0.0.1:5000/apidj/create`, {
+
+                    const fetch_url = "{{ url_for('apidj/create') }}"
+
+                    fetch(fetch_url, {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
@@ -131,7 +134,7 @@
                             localStorage.setItem('djId_dj', dat['id']);
                             console.log('yeah');
 
-                            window.location.href = 'http://127.0.0.1:5500/views/djentry.html';
+                            window.location.href = "{{ url_for('djentry') }}";
                         }
                         else{
                             console.log("couldn't add to firebase");
