--- a/app/templates/userentry.html
+++ b/app/templates/userentry.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NEXT >></title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css')}}">
   </head>
 
   <body>
@@ -40,7 +40,7 @@
                     localStorage.setItem('djId_user', djId);
 
                     // Redirect to a new page, e.g., the registration completion page
-                    window.location.href = 'http://127.0.0.1:5500/views/user.html';
+                    window.location.href = "{{ url_for('user') }}";
                 }).catch(error => console.error('Error fetching items:', error));
                 
 
@@ -51,7 +51,7 @@
 
         async function fetchMoviesAndCategories(event_id) {
             const [djResponse, userResponse] = await Promise.all([
-                fetch('http://127.0.0.1:5000/api/dj', {
+                fetch("{{ url_for('get_maindj') }}", {
                     method: 'POST', // or 'POST', etc.
                     headers: {
                             'Content-Type': 'application/json',
@@ -61,7 +61,7 @@
                         if (!response.ok) throw new Error('Network response was not ok');
                         return response.json();
                     }),
-                fetch('http://127.0.0.1:5000/api/user', {
+                fetch("{{ url_for('create_user') }}", {
                     method: 'POST', // or 'POST', etc.
                     headers: {
                             'Content-Type': 'application/json',
