--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -52,7 +52,7 @@
     let req_song_artists = [];
 
 
-    const socket = io.connect('http://' + document.domain + ':' + location.port, { transports: ["websocket"], });
+    const socket = io.connect('https://' + document.domain + ':' + location.port, { transports: ["websocket"], });
 
     // console.log(socket);
 
@@ -63,7 +63,7 @@
       if(req_room.length != 0){
         new Set(req_room).forEach(x =>{
           
-          console.log(x);
+          // console.log(x);
           socket.emit('join', {'room': x, 'access':'dj'});
         });
       }  
