--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -68,14 +68,14 @@
         });
       }  
 
-      socket.emit('ping');
-      console.log('ping');
+      // socket.emit('ping');
+      // console.log('ping');
     });
 
-    socket.on('ping', function(data) {
-        console.log('Ping received:', data);
-        socket.emit('pong', {'pong': data});
-    });
+    // socket.on('ping', function(data) {
+    //     console.log('Ping received:', data);
+    //     socket.emit('pong', {'pong': data});
+    // });
 
     socket.on('req_updated',(data)=>{
         console.log(data);
