--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -55,10 +55,11 @@
     const socket = io.connect('https://' + document.domain + ':' + location.port, { transports: ["websocket"], });
 
     // console.log(socket);
+    setInterval(periodicTask, 20000);
 
     socket.on('connect', async function () {
       console.log('Websocket connected!');
-       fetchData_dj();
+      fetchData_dj();
       swiping();
       console.log(req_room,"yo");
       if(req_room.length != 0){
@@ -68,9 +69,12 @@
           socket.emit('join', {'room': x, 'access':'dj'});
         });
       }  
-
-      socket.emit('alive');
+      
     });
+
+    function periodicTask(){
+      socket.emit('alive');
+    }
 
     socket.on('ping', function(data) {
         console.log('Ping received:', data);
