--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -60,7 +60,7 @@
     socket.on('connect', async function () {
       console.log('Websocket connected!');
       fetchData_dj();
-      swiping();
+      
       console.log(req_room,"yo");
       if(req_room.length != 0){
         new Set(req_room).forEach(x =>{
@@ -77,7 +77,6 @@
     }
 
     socket.on('ping', function(data) {
-        console.log('Ping received:', data);
         socket.emit('pong', {'pong': data});
     });
 
@@ -189,7 +188,7 @@
         document.getElementById("eventId").innerHTML = 'Event: ' + data.Event['name'] + '(id: ' + data.Event['id'] + ')';
 
       })
-        .catch(error => console.error('Error fetching items:', error));
+        .then(() => swiping()).catch(error => console.error('Error fetching items:', error));
     }
 
     let mediaRecorder;
